<resources>
    <string name="app_name">Approdite</string>
    <string name="empty_fields_message">Empty Fields Are not Allowed !!</string>
    <string name="unregistered_email_message">Unregistered email</string>
    <string name="wrong_password_message">Wrong password</string>
    <string name="login_failed_message">Login failed</string>
    <string name="login_success_message">Login successfully!</string>

    <!--    Splash Screen -->
    <string name="title_splash">Digital\nplatform\nfor managing\nproject tasks.</string>
    <string name="desc_splash">Manage tasks more practically.\nMake your team much more productive.</string>

    <!--    Login Screen-->
    <string name="title_login">Log in</string>
    <string name="desc_login">Log in to Approdite below and get your whole team organized</string>
    <string name="input">Enter Your Email</string>
    <string name="input_pw">Enter Your Password</string>
    <string name="email_login">Email</string>
    <string name="password_login">Password</string>
    <string name="remember_login">Remember me</string>
    <string name="login">Login</string>
    <string name="forgot_pw_login">Forgot password?</string>

    <string name="menu_dashboard">Dashboard</string>
    <string name="menu_leaderboard">Leaderboard</string>
    <string name="menu_store">Store</string>
    <string name="menu_profile">Profile</string>

    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="logout">Logout !</string>
    <string name="floating_action_text">New Project</string>

    <string name="insert_student">INSERT STUDENT</string>
    <string name="insert">INSERT</string>
    <string name="name">Kevin</string>
    <string name="nim">undefined</string>
    <string name="fakultas">Smk Wikrama</string>
    <string name="logo">TODO</string>
    <string name="logout_text">Logout !</string>
    <string name="welcome_to_approdite">Welcome To Approdite</string>
    <string name="edit_project">Edit Project</string>
    <string name="project_name">Project Name</string>
    <string name="task_name">Task Name</string>
    <string name="assign_to">Assign To</string>
    <string name="sprint">Sprint</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="attachment">Attachment</string>
    <string name="create_project">Create Project</string>
</resources>